--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@docket/docket-sdk",
+  "name": "@docket/docket.js",
   "version": "0.12.0",
   "description": "JavaScript SDK for interfacing with the Docket API",
   "license": "Unlicense",
