--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "fs": false
   },
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
+    "babel": "6.23.0",
+    "babel-cli": "6.26.0",
     "superagent": "4.1.0"
   },
   "devDependencies": {
     "babel-core": "6.26.3",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "expect.js": "~0.3.1",
-    "mocha": "~6.0.1",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-0": "6.24.1",
+    "expect.js": "0.3.1",
+    "mocha": "6.0.1",
     "sinon": "7.2.4"
   }
 }
